fix github ribbon overlapping nav in *very* small screens

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -495,6 +495,12 @@ nav li {
     border: 0;
 }
 
+@media ( max-width : 340px) {
+    .github-ribbon {
+        max-width: 35%;
+    }
+}
+
 @media ( max-width : 514px) {
     .mobile-nav ul > li {
         width: auto;
